--- a/redirect.html
+++ b/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs412699_minhati_com_br/EdgaI0meBrRCjxOYbggK1d0BBqu78tUMjzsEMAWX_MozwA?e=4FzoYb" />
+    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs412699_minhati_com_br/EUJDVp7A0oVDurCbBWK4FT4BSA4-Y_buNb-4iQs2v72rQw?e=amaaKH" />
     <title>Redirecionando...</title>
 </head>
 <body>
