--- a/redirect.html
+++ b/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs412699_minhati_com_br/EUJDVp7A0oVDurCbBWK4FT4BSA4-Y_buNb-4iQs2v72rQw?e=amaaKH" />
+    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs432001_minhati_com_br/EUZb4U9Dd_pDuXGyVVIt2SoBIOn6m2698KUoFKvQHYd9NQ?e=vOWS6m" />
     <title>Redirecionando...</title>
 </head>
 <body>
